# movie-ticketing-backend-vibe

./: pyproject.toml
docs/: PRD.md  TRD.md
src/movie_ticketing_backend/: __init__.py
